add invoice and policy email templates for customer notifications

--- a/insure_app/insure/templates/emails/invoice.html
+++ b/insure_app/insure/templates/emails/invoice.html
@@ -85,7 +85,7 @@
             <p><strong>Duration:</strong> {{ policy_duration }}</p>
         </div>
         <div>
-            <a href="{% url 'download_policy' policy_number %}" class="download-btn">Download Policy</a>
+            <a href="" class="download-btn">Download Policy</a>
         </div>
     </div>
 
@@ -108,7 +108,7 @@
             <p><strong>Payment Date:</strong> {{ payment_date }}</p>
         </div>
         <div>
-            <a href="{% url 'download_invoice' invoice_number %}" class="download-btn">Download Invoice</a>
+            <a href="" class="download-btn">Download Invoice</a>
         </div>
     </div>
 
